tests/fixtures/errors/unit_level_bare_type.z
# E0100: a unit-level constant takes a literal value; a bare type name is
# not a value at unit scope (zero values are function-body bindings).
x: u64

main: function is {
    print "\{x}"
}
